# vn30-forecasting-pipeline

./: .env.example  .gitignore  DEPLOY_VM.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt  skill.md
config/: airflow.cfg  tickers.yaml
dags/: vn30_backfill_pipeline.py  vn30_daily_pipeline.py
infrastructure/: setup_azure.sh
nginx/conf.d/: airflow.conf
scripts/: get_data_from_processed.py  test.ipynb  test.py
scripts/data-mining/model/: __init__.py  load_data.py  testing.py  training.py  transformer.py
scripts/data-mining/model/preprocessing/: __init__.py  preprocess.py  utils.py
scripts/ingestion/: extract_vnstock.py  upload_to_blob.py
scripts/load/: gold_load.py
scripts/transform/: silver_transform.py
sql/: gold_schema.sql
