[project]
name = "vn30-stock-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-storage-blob>=12.28.0",
    "python-dotenv>=1.0.1",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pyodbc>=5.3.0",
    "pyspark>=4.1.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "vnstock>=3.5.0",
]

[dependency-groups]
ml = [
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]
